--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.header {
+  background-color: #c5081f;
+  color: green;
+  height: 80px;
+  margin: 0;
 }
