--- a/style.css
+++ b/style.css
@@ -38,11 +38,17 @@ body {
 
 .red {
   background-color: #f10a0a;
-  grid-row: 1 / 3;
+  grid-row: 1 / 4;
+  width: 90%;
 }
 
 .mid-red {
   background-color: #c5081f;
+  grid-column: 2 / 3;
 }
 
-.
+
+.dark-red{
+  background-color: #9A0F18;
+ 
+}
