--- a/style.css
+++ b/style.css
@@ -39,16 +39,33 @@ body {
 .red {
   background-color: #f10a0a;
   grid-row: 1 / 4;
-  width: 90%;
+  width: 100%;
 }
 
 .mid-red {
   background-color: #c5081f;
   grid-column: 2 / 3;
+  width: 80%;
 }
 
 
 .dark-red{
   background-color: #9A0F18;
- 
+  width: 100%;
+  height: 170px;
+}
+
+.mid-purple{
+  background-color: #C70CBF;
+  width: 100px;
+  height: 100px;
+  grid-column:  3 / 2;
+}
+
+.purple{
+  background-color: #FA29E5;
+}
+
+.dark-purple{
+  background-color: #8B0A77;
 }
