--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 .dark-red {
   background-color: #9a0f18;
   grid-column: 4 / 6;
-  grid-row: 1 / 3
+  grid-row: 1 / 3;
 }
 
 .mid-purple {
@@ -68,4 +68,33 @@ body {
   background-color: #8b0a77;
   grid-column: 5 / 3;
   grid-row: 5 / 6;
+}
+
+.pictures{
+display: flex;
+flex-direction: column;
+justify-content: row;
+padding: 5px;
+}
+
+.pictures_2{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+padding: 5px;
+}
+
+.pictures_3{
+display: flex;
+flex-direction: column;
+justify-content: row;
+padding: 5px;
+}
+
+.pictures_4{
+  display: flex;
+flex-direction: column;
+justify-content: space-between;
+padding: 5px;
+
 }
