--- a/Style_2.css
+++ b/Style_2.css
@@ -1,35 +1,45 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  header
-  {
-      display: flex;
-      flex-direction: row;
-      background-color: #700909;
-      height: 100px;
-  }
+header h1 {
+  display: flex;
+  flex-direction: row;
+  background-color: #700909;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
+}
 
-  .Container_1
-  {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 100px;
-    background-color: #0E0437;
-  }
 
-  .Block_1{
-    width: 10px;
-    height: 300px;
+.Container_1 {
+  display: flex;
+  margin-top: 10px;
+  gap: 155px;
+}
 
-  }
+.Block_1 {
+  height: 509px;
+  width: 265px;
+  flex-direction: column;
+  margin-top: 10px;
+  background-color: #0e0437;
+}
 
-  .Block_2{
-    height: 300px;
-  }
+.Block_2 {
+  height: 509px;
+  width: 365px;
+  flex-direction: column;
+  margin-top: 10px;
+  background-color: #700909;
+}
 
-  .Block_3{
-    height: 300px;
-  }
+.Block_3 {
+  height: 509px;
+  width: 340px;
+  flex-direction: column;
+  margin-top: 10px;
+  background-color: #0e0437;
+}
